Bug:69360 Fixed all the cell padding and spacing references to call classes on the tables. Added padding and margins to inline elements Introduced ZInlineInput class for styling inputs used in lines of text Removed use of &nbsp; elements for spacing - ick
http://bugzilla.zimbra.com/show_bug.cgi?id=69360

Copied from Perforce
 Change: 346267

--- a/WebRoot/css/zm.css
+++ b/WebRoot/css/zm.css
@@ -4340,6 +4340,10 @@ HTML>BODY .appt-selected .appt_allday_body
 	margin:1px 3px;
 }
 
+.ZInlineInput {
+	margin:0 .5em;
+}
+
 .ZLabelCell {
 	text-align:right;
 	vertical-align:top;
